--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,9 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "fastapi>=0.115.14",
+    "psycopg2-binary>=2.9.10",
     "pydantic>=2.11.7",
+    "pydantic-settings>=2.10.1",
     "sqlalchemy>=2.0.41",
-    "uvicorn>=0.34.3",
+    "uvicorn[standard]>=0.34.3",
 ]
