Add all scripts related to run optimization model

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "bcrypt>=4.3.0",
     "fastapi>=0.115.14",
     "psycopg2-binary>=2.9.10",
+    "pulp>=3.2.1",
     "pydantic>=2.11.7",
     "pydantic-settings>=2.10.1",
     "pyjwt>=2.10.1",
